[gd_scene load_steps=27 format=2]

[ext_resource path="res://Health.gd" type="Script" id=1]
[ext_resource path="res://bg_bar.tres" type="StyleBox" id=2]
[ext_resource path="res://green_bar.tres" type="StyleBox" id=3]
[ext_resource path="res://sprites/element/fire.png" type="Texture" id=4]
[ext_resource path="res://CurrentElement.gd" type="Script" id=5]
[ext_resource path="res://Respawn.gd" type="Script" id=6]
[ext_resource path="res://HUD.gd" type="Script" id=7]
[ext_resource path="res://sprites/element/earth.png" type="Texture" id=8]
[ext_resource path="res://BossName.tres" type="DynamicFont" id=9]
[ext_resource path="res://red_bar.tres" type="StyleBox" id=10]
[ext_resource path="res://MessageToPlayer.tres" type="DynamicFont" id=11]
[ext_resource path="res://sprites/player/player_head.png" type="Texture" id=12]

[sub_resource type="Theme" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "fire",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "earth",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "none",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnDeath" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respawn" type="Button" parent="Control/OnDeath"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 416.0
margin_top = 267.0
margin_right = 557.0
margin_bottom = 313.0
rect_scale = Vector2( 2.85459, 2.28684 )
custom_fonts/font = ExtResource( 9 )
text = "RESPAWN"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/OnDeath/Respawn"]
margin_left = -31.8785
margin_top = 45.9149
margin_right = 179.122
margin_bottom = 76.9149
custom_fonts/font = ExtResource( 9 )
text = "(press space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageToPlayer" type="RichTextLabel" parent="Control"]
visible = false
margin_top = 176.0
margin_right = 1280.0
margin_bottom = 456.0
custom_fonts/normal_font = ExtResource( 11 )
bbcode_enabled = true
bbcode_text = "[center]WAVE 1[/center]"
text = "WAVE 1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="ProgressBar" parent="Control"]
anchor_right = 0.111
margin_left = 32.0
margin_top = 656.0
margin_right = 401.0
margin_bottom = 688.0
rect_scale = Vector2( 0.9982, 1 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = ExtResource( 3 )
custom_styles/bg = ExtResource( 2 )
value = 100.0
percent_visible = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentElement" type="AnimatedSprite" parent="Control"]
position = Vector2( 64, 608 )
scale = Vector2( 4.0946, 3.63514 )
frames = SubResource( 10 )
animation = "fire"
frame = 1
playing = true
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 579, 674 )
scale = Vector2( 3.13333, 3.13333 )
texture = ExtResource( 12 )

[node name="Boss" type="Control" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Boss"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 508.0
margin_top = 22.0
margin_right = 740.0
margin_bottom = 62.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]BULL OF WRATH[/center]"
text = "BULL OF WRATH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossHealth" type="ProgressBar" parent="Control/Boss"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 364.0
margin_top = 64.0
margin_right = 875.08
margin_bottom = 96.0
rect_scale = Vector2( 0.9982, 1 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = ExtResource( 10 )
custom_styles/bg = ExtResource( 2 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = 80.0
margin_right = -82.0
margin_bottom = 140.0
rect_scale = Vector2( 2.85459, 2.28684 )
custom_fonts/font = ExtResource( 9 )
text = "Title Screen"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/OnDeath/Respawn" to="." method="_on_Respawn_pressed"]
[connection signal="pressed" from="Control/TitleScreen" to="." method="_on_TitleScreen_pressed"]
